nighthawk/tools/envoy.yaml
static_resources:
  listeners:
  # define an origin server on :10000 that always returns "lorem ipsum..."
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config: 
          generate_request_id: false
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                direct_response:
                  status: 200
                  body:
                    filename: test/test_data/lorem_ipsum.txt
          http_filters:
          - name: envoy.router
            config:
              dynamic_stats: false
      tls_context:
        common_tls_context:
          tls_params:
            cipher_suites: "-ALL:[ECDHE-RSA-AES128-GCM-SHA256]:"
          tls_certificates:
            - certificate_chain:
                filename: "tools/servercert.pem"
              private_key:
                filename: "tools/serverkey.pem"
admin:
  access_log_path: /tmp/envoy.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
